 - GBA: Reset now reloads multiboot ROMs
 - GBA BIOS: Fix multiboot entry point (fixes Magic Floor)
 - GB Video: Delay LYC STAT check (fixes mgba.io/i/1331)
 - GB Video: Fix window being enabled mid-scanline (fixes mgba.io/i/1328)
 - GB I/O: Filter IE top bits properly (fixes mgba.io/i/1329)
 - GBA Video: Fix wrapped sprite mosaic clamping (fixes mgba.io/i/1432)
Other fixes:
 - Qt: Fix some Qt display driver race conditions
 - Core: Improved lockstep driver reliability (Le Hoang Quyen)
 - Switch: Fix threading-related crash on second launch
 - Qt: Fix FPS target maxing out at 59.727 (fixes mgba.io/i/1421)
Misc:
 - GBA Savedata: EEPROM performance fixes
 - GBA Savedata: Automatically map 1Mbit Flash files as 1Mbit Flash
 - GB Memory: Support running from blocked memory
 - Qt: Don't unload ROM immediately if it crashes
 - Debugger: Add breakpoint and watchpoint listing
 - LR35902: Support PC-relative opcode decoding
 - Qt: Support switching webcams
 - Core: Add keysRead callback
 - Qt: Cap window size on start to monitor size
 - GBA BIOS: Add timings for HLE BIOS math functions (fixes mgba.io/i/1396)
 - Debugger: Make tracing compatible with breakpoints/watchpoints
 - Debugger: Print breakpoint/watchpoint number when inserting
 - Qt: Open a message box for Qt frontend errors
 - GBA Video: Clean up dead code in sprite rendering loop
 - FFmpeg: Support audio-only recording
 - Qt: Increase maximum magnifications and scaling
 - Qt: Add native FPS button to settings view
 - Qt: Improve sync code
 - Switch: Dynamic display resizing
 - Qt: Make mute menu option also toggle fast-forward mute (fixes mgba.io/i/1424)

0.7.2: (2019-05-25)
Emulation fixes:
 - GB: Fix HALT when IE and IF unused bits are set (fixes mgba.io/i/1349)
 - GB Timer: Fix timing adjustments when writing to TAC (fixes mgba.io/i/1340)
 - GB Video: Fix window y changing mid-window (fixes mgba.io/i/1345)
 - GB Video: Fix more window edge cases (fixes mgba.io/i/1346)